:zap: update login flow

--- a/src/pages/OTP/otp.sass
+++ b/src/pages/OTP/otp.sass
@@ -7,8 +7,11 @@
     text-transform: uppercase
     cursor: pointer
 
-  .otp_input
+  .wrapper
     margin: 50px 8px
+
+  .otp_input
+    margin: 0 8px
 
     input
       font-size: 36px
