:zap: add firebase login

--- a/src/shared/Header/header.sass
+++ b/src/shared/Header/header.sass
@@ -1,16 +1,15 @@
 @use '../../styles/mixins'
 
 .rounded-profile
-  width: 32px
-  height: 32px
+  padding: 10px 12px
+  letter-spacing: 1px
   border-radius: 50%
   text-align: center
   background: #dee2ee
   @include mixins.flex($flexDirection: row, $justifyDirection: center, $alignDirection: center)
   cursor: pointer
 
-.ant-dropdown
-  margin-top: 30px
+.menus
   width: 280px
   box-shadow: 0 2px 8px rgb(48 49 53 / 16%)
   background-color: #fff
