--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import "./header";
 @import './mixins.sass';
 @import '~antd/dist/antd.css';
+@import './base.scss';
 
 @import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
 
