--- a/src/pages/DashboardUser/Layout/layoutdashboard.sass
+++ b/src/pages/DashboardUser/Layout/layoutdashboard.sass
@@ -231,5 +231,26 @@
 .verified
   @include mixins.typograph($size: 16px, $weight: 600, $color: #0064d2, $lineHeight: 1.52)
 
+// ------------------ Smart Profile ------------------
+.smart_profile
+  position: relative
+
+  &__box_header
+    background-color: #fff
+    padding: 24px
+    border-bottom: 1px solid #dee2ee
+
+    .title
+      color: #35405a
+      font-size: 20px
+      font-weight: 600
+
+    .search_box
+      @include @include mixins.flex($flexDirection: row, $justifyDirection: space-between, $alignDirection: center)
+      margin: 16px 0 0
+
+
+  &__box_list
+    background-color: #fff
 
 
