:zap: mobile view trains

--- a/src/pages/DashboardUser/Layout/layoutdashboard.sass
+++ b/src/pages/DashboardUser/Layout/layoutdashboard.sass
@@ -246,7 +246,7 @@
       font-weight: 600
 
     .search_box
-      @include @include mixins.flex($flexDirection: row, $justifyDirection: space-between, $alignDirection: center)
+      @include mixins.flex($flexDirection: row, $justifyDirection: space-between, $alignDirection: center)
       margin: 16px 0 0
 
 
